force-app/main/default/objects/Contact_User_Badges__c/Contact_User_Badges__c.object-meta.xml
<CustomObject>
    <description>Junction object to tie the Contact object to the User Badges object</description>
    <label>Contact User Badge</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Contact User Badges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact User Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>