force-app/main/default/objects/Contact_User_Badges__c/fields/Contact_User__c.field-meta.xml
<CustomField>
    <fullName>Contact_User__c</fullName>
    <formula>Contact__r.User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact User</label>
    <type>Text</type>
</CustomField>