force-app/main/default/objects/Contact_User_Badges__c/fields/user_badges__c.field-meta.xml
<CustomField>
    <fullName>user_badges__c</fullName>
    <label>User Badge</label>
    <referenceTo>trailheadapp__User_Badge__c</referenceTo>
    <relationshipLabel>Contact User Badges</relationshipLabel>
    <relationshipName>Contact_User_Badges</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>